@@ -11,7 +11,8 @@ Changelog
  * Fix: Link tooltip now shows correct urls for newly inserted document links (Matt Westcott)
  * Fix: Now page chooser (in a rich text editor) opens up at the link's parent page, rather than at the page itself (Matt Westcott)
  * Fix: Reverted fix for explorer menu scrolling with page content, as it blocked access to menus that exceed screen height
- 
+ * Fix: Image listing in the image chooser no longer becomes unpaginated after an invalid upload form submission (Stephen Rice)
+
 
 1.5 (31.05.2016)
 ~~~~~~~~~~~~~~~~
